# zero2prod

./: Cargo.toml  Dockerfile  README.md  chef.Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yaml  general.yaml
.sqlx/: query-5efa2449501e598c2ff22eff70f0b697eb3a38a282334b7569eea46b30c0f396.json
configuration/: base.yaml  production.yaml
migrations/: 20240331031547_add_status_to_subscriptions.sql  20240331033331_make_status_not_null_in_subscriptions.sql  20240331033641_create_subscription_tokens_table.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  newsletter.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
